task: setup basic session mgmt
