# backend/api/model/rollpay_token.go
@@ -1,0 +1,110 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package model
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// RollpayToken rollpay token
+//
+// swagger:model RollpayToken
+type RollpayToken struct {
+
+	// expiration
+	// Read Only: true
+	// Format: date-time
+	Expiration strfmt.DateTime `json:"expiration,omitempty"`
+
+	// token
+	// Read Only: true
+	Token string `json:"token,omitempty"`
+}
+
+// Validate validates this rollpay token
+func (m *RollpayToken) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateExpiration(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *RollpayToken) validateExpiration(formats strfmt.Registry) error {
+	if swag.IsZero(m.Expiration) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("expiration", "body", "date-time", m.Expiration.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validate this rollpay token based on the context it is used
+func (m *RollpayToken) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateExpiration(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateToken(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *RollpayToken) contextValidateExpiration(ctx context.Context, formats strfmt.Registry) error {
+
+	if err := validate.ReadOnly(ctx, "expiration", "body", strfmt.DateTime(m.Expiration)); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RollpayToken) contextValidateToken(ctx context.Context, formats strfmt.Registry) error {
+
+	if err := validate.ReadOnly(ctx, "token", "body", string(m.Token)); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *RollpayToken) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *RollpayToken) UnmarshalBinary(b []byte) error {
+	var res RollpayToken
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
